# libcaffeine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  build.bat  build.sh  generate-graphql-types.sh  install.bat  install.sh
.github/workflows/: main.yml
.hooks/: pre-commit.sh
ci/win/: bootstrap.cmd  build.cmd  build.js  install.cmd  package.cmd
cmake/: PackageConfig.cmake.in
cmake/modules/: FindLibcurl.cmake  FindWebRTC.cmake
docs/: doxygen.config
docs/html/: dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js
docs/html/d6/db0/: caffeine_8h.html  caffeine_8h_source.html
docs/html/search/: all_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js
example/: example.cpp
include/: caffeine-api.h  caffeine.h
scripts/: generate-graphql-types.sh  win-build.bat
src/: Api.cpp  Api.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioDeviceDefaultImpl.hpp  Broadcast.cpp  Broadcast.hpp  CaffQL.hpp  Caffeine.cpp  CaffeineHelpers.hpp  Configuration.hpp.in  Dummy.cpp  ErrorLogging.hpp  Helpers.hpp  Instance.cpp  Instance.hpp  Interface.cpp  Interface.hpp  LogSink.cpp  LogSink.hpp  PeerConnectionObserver.cpp  PeerConnectionObserver.hpp  Policy.cpp  Policy.hpp  RestApi.cpp  RestApi.hpp  Serialization.cpp  Serialization.hpp  SessionDescriptionObserver.cpp  SessionDescriptionObserver.hpp  StatsObserver.cpp  StatsObserver.hpp  Stream.cpp  Stream.hpp  Urls.cpp  Urls.hpp  Utils.hpp  VideoCapturer.cpp  VideoCapturer.hpp  VideoSource.cpp  (+31 more)
tests/: CMakeLists.txt
tests/src/: unit-custom-environment.cpp  unit-default-environment.cpp  unit-doctest.cpp  unit-policy.cpp  unit-serialization.cpp
x264/include/: x264_config.h
